[package]
name = "rpm"
version = "0.16.0"
authors = [
  "René Richter <richterrettich@gmail.com>",
  "Bernhard Schuster <bernhard@ahoi.io>",
  "Max Dymond <cmeister2@gmail.com>",
  "Daniel Alley <dalley@redhat.com>",
]
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "A pure rust library for building and parsing RPMs"
homepage = "https://github.com/rpm-rs/rpm"
repository = "https://github.com/rpm-rs/rpm"
readme = "README.md"
keywords = ["RPM", "packaging"]
categories = ["parsing", "development-tools"]
rust-version = "1.75.0"

[lib]
name = "rpm"

# tests that try to install / verify RPMs using rpm / dnf in Linux containers via podman
[[test]]
name = "rpm-compat-tests"
required-features = ["test-with-podman"]
path = "tests/compat.rs"

[[test]]
name = "signatures"
required-features = ["signature-meta"]
path = "tests/signatures.rs"

[dependencies]
bitflags = "2"
thiserror = "2"
nom = "8"
num-traits = "0.2"
num-derive = "0.4"
num = "0.4"
enum-primitive-derive = "0.3"
enum-display-derive = "0.1"
cpio = "0.4"
flate2 = { version = "1", optional = true }
digest = "0.10"
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
pgp = { version = "0.14.0", optional = true }
chrono = { version = "0.4", optional = true }
log = "0.4"
itertools = "0.13"
hex = { version = "0.4", features = ["std"] }
zstd = { version = "0.13", optional = true }
xz2 = { version = "0.1", optional = true }
bzip2 = { version = "0.5.0", optional = true }

[dev-dependencies]
env_logger = "0.11"
serial_test = "3.0"
pretty_assertions = "1.3"
gethostname = "1.0"
hex-literal = "0.4"

[features]
default = [
    "signature-pgp",
    "gzip-compression",
    "zstd-compression",
    "xz-compression",
]

gzip-compression = ["flate2"]
zstd-compression = ["zstd"]
xz-compression = ["xz2"]
bzip2-compression = ["bzip2"]

signature-pgp = ["signature-meta", "pgp", "chrono"]
signature-meta = []

# Segregate tests that require podman to be installed
test-with-podman = ["signature-pgp"]

zstdmt = ["zstd-compression", "zstd/zstdmt"]
